--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
+    <!-- Header -->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!--Navigation  -->
         <div>
             <ul>
                 <li>
@@ -24,8 +26,13 @@
             </ul>
         </div>
     </div>
+
+    <!-- Hero -->
     <div class="hero"></div>
+
+    <!-- Content section -->
     <div class="content">
+        <!-- Search engine optimization section -->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -33,6 +40,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+        <!-- Online Reputation Management Section -->
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -40,6 +48,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
+        <!-- Social Media Marketing Section -->
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -48,6 +57,8 @@
             </p>
         </div>
     </div>
+
+    <!-- Benefits sidebar -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +82,8 @@
             </p>
         </div>
     </div>
+
+    <!-- Footer -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
